# highfog-ch-service

./: .dockerignore  .env-dist  .gitignore  Dockerfile  README.md  col.txt  config.py  docker-compose.yml  highfog.wsgi  index.html  manifest.json  run.py  tiler.py
Documentation/: Database.backup  deploy.txt  requirements.txt
backend/: Dockerfile  highfog.wsgi  pyproject.toml  requirements.txt  run.py  run_scheduled.py
backend/config/: api_config.py  ext_config.py  flask_config.py
backend/scripts/: update_fog_height.py  update_heights.py  update_peaks.py  update_public_transport.py
backend/scripts/initial_data/: peaks.csv  public_transport.csv
backend/tests/: testbase.py
backend/tests/test_webservice/: test_query_issuer.py  test_update_fog_height.py  test_views.py
backend/webservice/: __init__.py  crossdomain.py  models.py  query_issuer.py  update_fog_height.py  views.py
config/: api_config.py
css/: style.css
frontend/: index.html  manifest.json
js/: config.js  controls.js  error.js  fog.js  main.js  map.js  poi.js  position.js
nginx/: 50-setup-templates.sh  nginx.conf.template
scripts/: update_heights.py  update_peaks.py  update_public_transport.py
tests/: forecast_201503160900.csv  testbase.py
tiler/: Dockerfile  README.md  col.txt  docker-compose.yml  docker_run.sh  render_fog_tiles_switzerland.txt  run_commands_async.py  tiler.py  tiler_parallel.py
webservice/: __init__.py  crossdomain.py  data.py  models.py  query_issuer.py  testbase.py  update_fog_height.py  update_heights.py  update_pois.py  update_public_transport.py  views.py
(+16 files in other folders)
