[tool.poetry]
name = "fog_app_service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
raven = {extras = ["flask"], version = "^6.10.0"}
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
Flask-Testing = "^0.8.0"
GeoAlchemy2 = "^0.8.4"
geojson = "^2.5.0"
itsdangerous = "^1.1.0"
Jinja2 = "^2.11.2"
MarkupSafe = "^1.1.1"
numpy = "^1.19.2"
psycopg2-binary = "^2.8.6"
Shapely = "^1.7.1"
SQLAlchemy = "^1.3.19"
Werkzeug = "^1.0.1"
pyproj = "^2.6.1"
schedule = "^0.6.0"
uWSGI = "^2.0.19"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
